--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coba-Coba Aja</title>
+    <title>BMI Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,6 +24,6 @@
         </div>
     </div>
 
-    <script src="sript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
